[project]
name = "linear-algebra"
version = "0.1.0"
description = "Collection of notes and code from Linear Algebra and Learning from Data by Gilbert Strang"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
    "Topic :: Scientific/Engineering"
]
license = "MIT"

dependencies = [
    "numpy>=2.2.3",
]

[dependency-groups]
dev = [
    "jupyterlab-git>=0.51.0",
    "mypy>=1.15.0",
    "nbdime>=4.0.2",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
jupyter = [
    "jupyterlab>=4.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
